May 15, 2012
============
[FIXED] Buggy behavior with the residence gallery
[ADDED] Grayscale support for the thumbnail images
[ADDED] Load images with .load()
[ADDED] Infinite scroll for banner

May 14, 2012
============
[CHANGED] Add experience collection to tab view for highlighting (footer.php, experiences.js, experiences.scss)


May 12, 2012
============
[ADDED] Caption support for Residence galleries.
        (footer.php, fixtures/residences.js, experience.js, CSS)

May 11, 2012
============
[ADDED] Fixtures folder for Gallery JavaScript galleries
[ADDED] Standalone gallery controls for residences page
[CHANGE] content.php markup, see div#experiences
[FIXED] Content template spacing


May 09, 2012
============

[ADDED] Can click banner images to move the carousel up/down an image.
[CHANGE] New classnames for carousel tabs: 

    <li id="exp1" class="exp-details static-tab">
      <a href="#" class="tab-button">
        <h2>Experience Name One <i class="caret"><img src="images/svg/caret.svg" alt=""></i></h2>
        <h3>For Couples</h3>
      </a>
    </li>

[FIXED] Flickers in Safari, positioning of UI elements.